# perceptron

./: LICENSE  setup.cfg
docs/: conf.py  index.rst  integral.rst
src/perceptron/: __init__.py  datalist.py  dataset.py  perceptron.py
test/: test_all.py  test_risk.py
